# typstforge-web

./: Cargo.toml  README.md  app.js  index.html  style.css
resources/: template.typ
src/: lib.rs
templates/: template.typ
web/: app.js  index.html
web/pkg/: README.md  package.json  typstforge_web.d.ts  typstforge_web.js  typstforge_web_bg.wasm.d.ts
